assets/style/style.css
@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;500;700&display=swap');

body {
    background-color: #7982ec3d;
}

h1 {
    font-family: 'Josefin Sans', sans-serif;
    color: #7982ED;
    font-size: 4rem;
    font-weight: 700;
    text-align: center;
}

.container {
    display: flex;
    align-items: center;
    flex-direction: column;
    justify-content: center;
}

input, select {
    border: solid 0.1rem #9D4D92;
    border-radius: 1rem;
    color: #9A437C;
    font-weight: 500;
    font-size: 1.5rem;
    margin: 0.75rem;
    padding: 0.5rem;
}

#third-row {
    display: flex;
    justify-content: center;
    padding-top: 1rem;
}

button {
    font-size: 1.5rem;
    padding: 0.75rem;
    border: solid 0.1rem #9D4D92;
    border-radius: 0.5rem;
    color: #9A437C;
    background-color: #7982ec5e;
    margin: 1rem;
}

